--- a/ITI.Poll.Infrastructure.Tests.Integration/ITI.Poll.Infrastructure.Tests.Integration.csproj
+++ b/ITI.Poll.Infrastructure.Tests.Integration/ITI.Poll.Infrastructure.Tests.Integration.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
